fix:card color and spacing

--- a/src/scss/base/_spacing.scss
+++ b/src/scss/base/_spacing.scss
@@ -1,4 +1,3 @@
 :root{
-    --spacing-small: 1.6rem;
-    --spacing-large: 2.0rem;
+    --spacing-default: 1.6rem;
 }
