--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,12 +1,13 @@
 h1{
     font-family: 'Outfit', sans-serif;
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     font-weight: 700;
+    color: var(--color-dark-blue);
 }
 
 p{
     font-family: 'Outfit', sans-serif;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 400;
     color: var(--color-gray-blue);
 }
